--- a/styles.css
+++ b/styles.css
@@ -82,7 +82,6 @@ h4 {
 }
 
 .hero-overlay {
-	background: rgba(0, 0, 0, 0.45);
 	width: 100%;
 	height: 100%;
 	display: flex;
@@ -108,6 +107,7 @@ h4 {
 .hero .lead {
 	font-size: 18px;
 	margin-bottom: 30px;
+	color: #292f36;
 }
 
 .btn-get-started {
@@ -522,6 +522,7 @@ h4 {
 	color: #fff;
 	padding: 100px 0;
 	text-align: center;
+	border-radius: 40px;
 }
 
 .cta-box h3 {
@@ -549,8 +550,8 @@ h4 {
 }
 
 .btn-primary:hover {
-	background-color: #fff;
-	color: #292f36;
+	background-color: #292f36;
+	transform: translateY(-3px);
 }
 
 .site-footer {
